@@ -24,7 +24,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -56,7 +55,7 @@ public class ChatService {
                     return filteredByTitle || filteredByUsers;
                 })
                 .map(Chat::getId)
-                .collect(Collectors.toList());
+                .toList();
         List<Message> messageList = messageRepository.findAllByChatIdListAndUserId(chatIdList, userId);
         return messageList.stream()
                 .collect(ChatUtils.CHAT_MAP_COLLECTOR);
